# ChangeLog for dev-lang/perl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/perl/ChangeLog,v 1.298 2009/11/15 09:06:30 tove Exp $

  15 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.8.8-r8.ebuild,
  +files/perl-5.8.8-libnet-hostname.patch:
  Add libnet hostname patch from perl-core/libnet

  14 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.8.8-r8.ebuild,
  perl-5.10.1.ebuild:
  Check for alternative scripts in ROOT

*perl-5.8.8-r8 (14 Nov 2009)

  14 Nov 2009; Torsten Veller <tove@gentoo.org> +perl-5.8.8-r8.ebuild:
  Add alternatives script linking to perl-5.8.8

  11 Nov 2009; Christian Ruppert <idl0r@gentoo.org>
  -files/perl-5.8.8-libbits.patch:
  Remove obsolete patch.

  04 Nov 2009; Michael Haubenwallner <haubi@gentoo.org>
  files/perl-5.8.8-ccld-cflags.patch:
  Respect CFLAGS also when linking executables, not just for libperl

  04 Nov 2009; Michael Haubenwallner <haubi@gentoo.org>
  perl-5.8.8-r6.ebuild, +files/perl-5.8.8-ccld-cflags.patch:
  Respect CFLAGS even for linking when done with compiler

  27 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> perl-5.10.1.ebuild:
  Keywording for ppc, bug 288028

  27 Oct 2009; Torsten Veller <tove@gentoo.org> perl-5.10.1.ebuild:
  Fix RT69973: disable non-unicode case insensitive trie matching (#290194)

  22 Oct 2009; Torsten Veller <tove@gentoo.org> perl-5.10.1.ebuild:
  Fix warning: Rebuild packages linking libperl.so after toggling use flags

  21 Oct 2009; Markus Meier <maekke@gentoo.org> perl-5.10.1.ebuild:
  add ~amd64/~arm/~x86, bug #288028

  13 Oct 2009; Jeroen Roovers <jer@gentoo.org> perl-5.10.1.ebuild:
  Marked ~hppa (bug #288028).

  29 Sep 2009; Torsten Veller <tove@gentoo.org> perl-5.10.1.ebuild:
  Rename and link the scripts from podlators too: pod2man and pod2text (#286962)

  28 Sep 2009; Torsten Veller <tove@gentoo.org> perl-5.10.1.ebuild: