@@ -32,16 +32,16 @@ AUX perl-regexp-nossp.patch 460 RMD160 dde3a25904275896e98d7b7f3a02926c8dbc5ca5 
 DIST perl-5.10.1-8.tar.bz2 7018 RMD160 aa8ec083175b328a659b75e045be9f4c6bb8f854 SHA1 88df50f09b6b0ca70b720bff363244cca81d0aec SHA256 85ba8f76c74693f8bb5f9bfdd9a593cf01858804e64c833dc20b75aa7bda3990
 DIST perl-5.10.1.tar.bz2 11608061 RMD160 840b3a5ac3d7f517770ce789676ebd9154d9ee5a SHA1 98b762b5cd4fb76dd354dfa5ba0d21bc2acacaf2 SHA256 9385f2c8c2ca8b1dc4a7c31903f1f8dc8f2ba867dc2a9e5c93012ed6b564e826
 DIST perl-5.8.8.tar.bz2 10123359 RMD160 e78f26d9b96e6db35f946ad4ff55e3a69385c71b SHA1 4aab490040727ca4419098720eca2ba4367df539 SHA256 818a140d9c04ea8dab3a05104b34ced7f7d9d0a91bfed91baf89a84d0dfb1bc9
-EBUILD perl-5.10.1.ebuild 17809 RMD160 36ff47493362633a0546902cdfdb53cff7247c5e SHA1 0fe2896062bc5fd2af67ae2dd19970d57a9c73c8 SHA256 3dc037c4f233415b2818ee75f195b61921a1d7ab995ca0f59f84a11c44dfe14e
+EBUILD perl-5.10.1.ebuild 17806 RMD160 d3616bcd6791b82e56d034604454a1942dfdb648 SHA1 2d646deea6ae98b8c3407ea5850cd5ad4d0cac84 SHA256 38c7ecc2012db1f73ce674c11a0587c0ce9f1ab8095e43949481b91c0b4b6fbd
 EBUILD perl-5.8.8-r5.ebuild 19309 RMD160 e96b9016ac7d415fc0662107384c58ce93f01c2d SHA1 9ade925c85bf618cb6aae9ab6ef93152a1932b0b SHA256 42a654e9e2dbcf2d105acb10a092d7fd079a543c01b2a6a216dcdfcce692fb62
 EBUILD perl-5.8.8-r6.ebuild 19745 RMD160 e8b10189225a79880cbc99ca274af66165dc04be SHA1 d6449cb18f89a502f6dd2c3f2027479da5686c07 SHA256 ac275f3959902c31d662c32c266991752544da7cd7b589c4aeb1ce804bc02c3a
 EBUILD perl-5.8.8-r8.ebuild 20806 RMD160 06ebbc48ed4da65e42114a4dff062b6a811f65ea SHA1 fd17853800de55358688472b2830b21d78d18a40 SHA256 e723ae28e7564890677398757fe8975ab9caa9197404c6ab443ff88a929c0776
-MISC ChangeLog 62839 RMD160 41c9d7a9889dfd8795381ed967c8c24915226f47 SHA1 0f75b842d9fbd10a0528b94f94ee706603a5bed4 SHA256 74ef331428bcc37a5afc1445ebc13697d3c6a1389f9a20cedfc3419112e133b4
+MISC ChangeLog 62943 RMD160 815e629e1a9fdf1a57151bd4c32c072527ed0523 SHA1 b5ec44a7609d0ac9d929d1d70fb39b7252582dcd SHA256 abc87d59516e70cc2c51254b407b2fca72ab49285002d45d53bcd82927b8181c
 MISC metadata.xml 451 RMD160 8424230d79d13df7462c454050058b3526a78e92 SHA1 1ae85db5c1c1fc6413ca324ebc93b6894831b437 SHA256 49e06011c113616fa1f618cf58d42c2d6abbce5f71936f109b6ae3a5dfff587c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkr/xJwACgkQV3J2n04EauzfxACfS1rDX31LRhdubzmfBye/UZV8
-sMIAoLl+tZI+8nDGa5zeBLtEFAes4R1z
-=IEYw
+iEYEARECAAYFAkr/xncACgkQV3J2n04Eaux93ACeKb8Pn4gCcpybuqon5SggEBOF
+/CgAoKF5XWSO9e9TwNtd3aSi3UfKx5FP
+=QyLg
 -----END PGP SIGNATURE-----
