@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/perl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/perl/ChangeLog,v 1.298 2009/11/15 09:06:30 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/perl/ChangeLog,v 1.299 2009/11/15 09:14:25 tove Exp $
+
+  15 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.10.1.ebuild:
+  Disable parallel tests (#293241)
 
   15 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.8.8-r8.ebuild,
   +files/perl-5.8.8-libnet-hostname.patch:
